# daydock

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
sample-vault/: README.md
sample-vault/Daily Notes/: 2026-03-11.md
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  long-break.json
src-tauri/src/: lib.rs  main.rs
src/features/active-task/components/: ActiveTaskZone.module.css  ActiveTaskZone.tsx
src/features/active-task/utils/: taskParser.test.ts  taskParser.ts
src/features/break-reminder/components/: LongBreakScreen.module.css  LongBreakScreen.tsx  MicroBreakOverlay.module.css  MicroBreakOverlay.tsx
src/features/break-reminder/hooks/: useBreakReminder.ts
src/features/daily-note/components/: NoteRenderer.module.css  NoteRenderer.tsx
src/features/daily-note/hooks/: useDailyNote.ts  useFileWatcher.ts
src/features/daily-note/utils/: markdownParser.ts  sectionParser.test.ts  sectionParser.ts
src/features/pomodoro/components/: PomodoroTimer.module.css  PomodoroTimer.tsx  ProgressRing.tsx
src/features/pomodoro/hooks/: usePomodoro.ts
src/features/settings/components/: SettingsDrawer.module.css  SettingsDrawer.tsx  VaultPathPicker.module.css  VaultPathPicker.tsx
src/features/settings/hooks/: useSettings.ts
src/features/settings/utils/: pathHelpers.ts  sectionPattern.test.ts  (+1 more)
src/shared/components/: Header.module.css  Header.tsx
src/shared/styles/: global.css  tokens.css
